package Prototype.strategypattern;

public interface DataFetchStrategy {
    Data fetchData(RequestParams requestParams);
}

