package Prototype.strategypattern;

public enum DataType {
    USER_PROFILE,
    PRODUCT_CATALOG,
    TRANSACTION_HISTORY,
    PRICING_DATA
}

